--- a/.github/workflows/on-failure-upload.yml
+++ b/.github/workflows/on-failure-upload.yml
@@ -1,4 +1,3 @@
-
 name: Upload Logs on Any CI Failure
 
 on:
@@ -11,22 +10,30 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::273354635930:role/github-oidc
+          aws-region: us-east-1
+
       - name: Install GitHub CLI
         run: sudo apt-get install gh -y
 
       - name: Download Logs of Failed Workflow
         run: |
+          mkdir -p logs
           gh run download ${{ github.event.workflow_run.id }} --dir logs
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload to S3
-        uses: jakejarvis/s3-sync-action@v0.5.1
-        with:
-          args: --acl private --follow-symlinks
-        env:
-          AWS_S3_BUCKET: ci-failure-logs-bucket
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: "./logs"
+      - name: Upload to S3 using AWS CLI
+        run: |
+          aws s3 cp logs/ s3://ci-failure-logs-bucket/logs/ --recursive --only-show-errors
